<resources>
    <string name="app_name">Smart Collection</string>
    <string name="App_Version">Version 1.0</string>
    <string name="google_api_key">AIzaSyC6Slk0FHObzHwJCPL40iP9KQAlLVXMCgU</string>
    <string name="Text_OK">OK</string>
    <string name="Text_PleaseWait">Please Wait</string>
    <string name="Text_Ya">Ya</string>
    <string name="Text_Tidak">Tidak</string>
    <string name="Text_Success">Sukses</string>
    <string name="Text_NoData">Tidak ada data</string>
    <string name="Text_HariIni">Hari Ini</string>
    <string name="Text_Akumulasi">Akumulasi</string>
    <string name="Text_CariPetugas">Cari Petugas</string>
    <string name="Text_Batal">Batal</string>
    <string name="Text_SelectAll">Select All</string>
    <string name="Text_SomethingWrong">Terjadi kesalahan, mohon coba kembali</string>
    <string name="Text_SomethingWrongWithNetwork">Terjadi kesalahan, mohon periksa kondisi jaringan sebelum mencoba kembali</string>
    <string name="Text_UploadFailed">Upload gagal, mohon coba kembali</string>
    <string name="Text_MohonMaaf"></string>
    <string name="Text_IsianBelumLengkap">Form belum lengkap</string>
    <string name="Text_SortBy">Sort By :</string>
    <string name="Text_Logout">Log Out</string>
    <string name="Misc_Copyright">\u00A9 Copyright Bank BTN 2017</string>
    <string name="Login_EnterUsernamePassword">Masukkan Username dan Password Anda</string>
    <string name="Login_ShowPassword">Tunjukkan Password</string>
    <string name="Login_RememberMe">Remember Me</string>
    <string name="Login_ID">User ID</string>
    <string name="Login_Password">Password</string>
    <string name="Login_Alert_UserCannotAccess">User ini tidak memiliki hak untuk mengakses aplikasi Smart Collection</string>
    <string name="Login_Alert_UsernameOrPasswordEmpty">Username atau Password belum diisi</string>
    <string name="Home_Menu">Menu</string>
    <string name="Home_Alert_Logout_Message">Apakah anda ingin log-out?</string>
    <string name="Home_UserID">User ID</string>
    <string name="Home_UserGroup">Group</string>
    <string name="Home_LogoutFailed">Gagal logout, mohon dicoba kembali</string>
    <string name="Dashboard_Title">Dashboard</string>
    <string name="DashboardStaff_Title">Dashboard Staff</string>
    <string name="Dashboard_Nominal">Nominal</string>
    <string name="Dashboard_Debitur">Debitur</string>
    <string name="Dashboard_FragmentTitle_Kunjungan">Kunjungan</string>
    <string name="Dashboard_FragmentTitle_Penyelesaian">Penyelesaian</string>
    <string name="Dashboard_FragmentTitle_PTP">PTP</string>
    <string name="Dashboard_FragmentTitle_NPL">NPL</string>
    <string name="Dashboard_NPL_Nasional">NPL Nasional</string>
    <string name="Dashboard_NPL_Kanwil">NPL Kanwil</string>
    <string name="Dashboard_NPL_KC">NPL KC</string>
    <string name="Dashboard_Target">Target</string>
    <string name="Dashboard_Realisasi">Realisasi</string>
    <string name="Dashboard_Outstanding">Outstanding</string>
    <string name="Dashboard_NPL">NPL</string>
    <string name="Dashboard_SaldoPokokNPL">Saldo Pokok NPL</string>
    <string name="Dashboard_NPL_Note_SaldoPokok">*Saldo pokok dalam satuan milyar</string>
    <string name="Dashboard_Menu_StaffDashboard">Dashboard Staff</string>
    <string name="Dashboard_Kunjungan_Outstanding">Outstanding</string>
    <string name="Dashboard_Kunjungan_BelumDikunjungi">Belum Dikunjungi</string>
    <string name="Dashboard_Kunjungan_SudahDikunjungi">Sudah Dikunjungi</string>
    <string name="Dashboard_Penyelesaian_SudahBayar">Sudah Bayar</string>
    <string name="Dashboard_Penyelesaian_BelumBayar">Belum Bayar</string>
    <string name="Dashboard_PTP_JumlahJanjiBayar">Jumlah Janji Bayar</string>
    <string name="Dashboard_Penyelesaian_BelumTanggal7">Dashboard penyelesaian akan ditampilkan setelah tanggal 7</string>
    <string name="Dashboard_PTP_JumlahBinaan">Jumlah Binaan</string>
    <string name="Dashboard_PTP_JanjiBayar">Janji Bayar</string>
    <string name="Dashboard_PTP_TidakJanjiBayar">Tidak Janji Bayar</string>
    <string name="StaffSelector_Title">Pilih Staff</string>
    <string name="dashboardKunjungan_Mode_Today">MKI_SP_DASHBOARD_KUNJUNGAN_TODAY</string>
    <string name="dashboardKunjungan_Mode_Monthly">MKI_SP_DASHBOARD_KUNJUNGAN_MONTH</string>
    <string name="dashboardPenyelesaian_Mode_Today">MKI_SP_DASHBOARD_PENYELESAIAN_TODAY</string>
    <string name="dashboardPenyelesaian_Mode_Monthly">MKI_SP_DASHBOARD_PENYELESAIAN_MONTH</string>
    <string name="dashboardPTP_Mode_Today">MKI_SP_DASHBOARD_PTP_TODAY</string>
    <string name="dashboardPTP_Mode_Monthly">MKI_SP_DASHBOARD_PTP_MONTH</string>
    <string name="Berita_Title">Info Berita</string>
    <string name="Berita_Adapter_Sender">From</string>
    <string name="Berita_Adapter_SendTime">Sent</string>
    <string name="Berita_Adapter_NoFiles">No files attached&#8230;</string>
    <string name="Berita_Broadcast_Title">Broadcast Berita</string>
    <string name="Berita_Broadcast_Judul">Judul Berita</string>
    <string name="Berita_Broadcast_JudulHint">Masukkan judul berita</string>
    <string name="Berita_Broadcast_Isi">Isi Berita</string>
    <string name="Berita_Broadcast_IsiHint">Masukkan isi berita</string>
    <string name="Berita_Broadcast_Summary">Summary Berita</string>
    <string name="Berita_Broadcast_SummaryHint">Masukkan summary berita</string>
    <string name="Berita_Broadcast_File">File (maks. 5MB)</string>
    <string name="Berita_Broadcast_NoFile">Belum ada file &#8230;</string>
    <string name="Berita_Broadcast_StartDate">Start Date</string>
    <string name="Berita_Broadcast_ExpiredDate">Expired Date</string>
    <string name="Berita_Broadcast_Kirim">Kirim Berita</string>
    <string name="Berita_Broadcast_Popup_Title">Broadcast berita ke&#8230;</string>
    <string name="Berita_Fragment_Global_Title">Berita Global</string>
    <string name="Berita_Fragment_Group_Title">Berita Group</string>
    <string name="Berita_Broadcast_Alert_StartDateAfterEndDate">Start date tidak boleh melebihi expired date</string>
    <string name="Berita_Broadcast_Alert_EndDateBeforeStartDate">Expired date tidak boleh mendahului start date</string>
    <string name="Berita_Broadcast_Alert_BroadcastSuccess">Berita berhasil dikirim</string>
    <string name="Berita_Search_CariJudul">Cari judul berita</string>
    <string name="Berita_Broadcast_AddFile_SelectType">Pilih jenis file</string>
    <string name="Berita_Broadcast_AddFile_AddImage">Tambah file gambar</string>
    <string name="Berita_Broadcast_AddFile_AddPDF">Tambah file .pdf</string>
    <string name="Berita_Broadcast_NoUserSelected">Tidak ada user yang dipilih</string>
    <string name="ListDebitur_PageTitle">List Debitur</string>
    <string name="ListDebitur_PageTitleTambahKontak">Tambah Kontak</string>
    <string name="ListDebitur_Empty">Tidak ada data debitur</string>
    <string name="ListDebitur_PilihTambah">Pilih</string>
    <string name="ListDebitur_TambahTelepon">Tambah Telepon</string>
    <string name="ListDebitur_TambahAlamat">Tambah Alamat</string>
    <string name="ListDebitur_AssignDate">Assign Date</string>
    <string name="ListDebitur_Fullname">Fullname</string>
    <string name="ListDebitur_TotalKewajiban">Total Kewajiban</string>
    <string name="ListDebitur_SearchHint">Cari debitur</string>
    <string name="ListDebitur_Search">Cari</string>
    <string name="ListDebitur_SortBy">Sort by</string>
    <string name="ListDebitur_GetBundleSuccess">Berhasil download data debitur</string>
    <string name="ListDebitur_SendOfflineDataSuccess">Berhasil mengirim data offline Form Visit dan Form Call</string>
    <string name="DetailDebitur_PageTitle">Detail Debitur</string>
    <string name="DetailDebitur_NoCif">CIF :  %1$s</string>
    <string name="DetailDebitur_NoRekening">Rekening : %1$s</string>
    <string name="DetailDebitur_TotalTunggakan">Total Tunggakan</string>
    <string name="DetailDebitur_LastPaymentDate">Last Payment Date</string>
    <string name="DetailDebitur_Dpd">DPD</string>
    <string name="DetailDebitur_AngsuanPerBulan">Angsuran / Bulan</string>
    <string name="DetailDebitur_TotalKewajiban">Total Kewajiban</string>
    <string name="DetailDebitur_Kolektabilitas">Kolektabilitas</string>
    <string name="DetailDebitur_TindakLanjut">Tindak Lanjut</string>
    <string name="DetailDebitur_Status">Status</string>
    <string name="DetailDebitur_Ptp">PTP</string>
    <string name="DetailDebitur_BesaranPtp">Besaran PTP</string>
    <string name="DetailDebitur_AlamatRumah">Alamat Rumah</string>
    <string name="DetailDebitur_AlamatAgunan">Alamat Agunan</string>
    <string name="DetailDebitur_AlamatKantor">Alamat Kantor</string>
    <string name="DetailDebitur_AlamatSaatIni">Alamat Saat Ini</string>
    <string name="DetailDebitur_MenuCall">Call</string>
    <string name="DetailDebitur_MenuCheckIn">Check In</string>
    <string name="DetailDebitur_MenuIsiFormVisit">Isi form visit</string>
    <string name="DetailDebitur_MenuLihatHistory">Lihat history</string>
    <string name="DetailDebitur_PilihNomorTelepon">Pilih nomor telepon</string>
    <string name="DetailDebitur_TambahTelepon">Tambah telepon</string>
    <string name="DetailDebitur_ViewTelepon">Lihat telepon</string>
    <string name="DetailDebitur_TambahAlamatDanTelepon">Tambah alamat</string>
    <string name="DetailDebitur_Gallery">Gallery</string>
    <string name="DetailDebitur_SuksesCheckIn">Sukses melakukan check in</string>
    <string name="DetailDebitur_PilihAlamat">Pilih Alamat</string>
    <string name="ViewTelepon_PageTitle">Daftar Telepon</string>
    <string name="ViewTelepon_Empty">Tidak ada data telepon</string>
    <string name="FormVisit_PageTitle">Form Visit</string>
    <string name="FormVisit_TujuanKunjungan">Tujuan kunjungan</string>
    <string name="FormVisit_AlamatYangDiKunjungi">Alamat yang dikunjungi</string>
    <string name="FormVisit_OrangYangDiKunjungi">Orang yang dikunjungi</string>
    <string name="FormVisit_OrangYangDiKunjungiHint">Tuliskan nama yang ditemui</string>
    <string name="FormVisit_HubunganDenganDebitur">Hubungan dengan debitur</string>
    <string name="FormVisit_HasilKunjungan">Hasil kunjungan</string>
    <string name="FormVisit_TanggalJanjiDebitur">Tanggal janji debitur</string>
    <string name="FormVisit_TanggalRealisasiJanji">Tanggal realisasi janji</string>
    <string name="FormVisit_JumlahYangAkanDisetor">Jumlah yang akan disetor</string>
    <string name="FormVisit_JumlahYangAkanDisetorHint">Masukkan jumlah yang akan disetor</string>
    <string name="FormVisit_StatusAgunan">Status agunan</string>
    <string name="FormVisit_KondisiAgunan">Kondisi agunan</string>
    <string name="FormVisit_AlasanMenunggak">Alasan menunggak</string>
    <string name="AccountAssignment_Assign">Assign</string>
    <string name="AccountAssignment_Popup_SetExpired">Set expired date</string>
    <string name="AccountAssignment_Popup_AssignTo">Assign To :</string>
    <string name="AccountAssignment_Popup_CariStaff">Cari petugas</string>
    <string name="AccountAssignment_Popup_NoStaff">Tidak ada petugas yang ditemukan</string>
    <string name="AccountAssignment_Popup_InformasiTambahanTitle">Informasi Tambahan</string>
    <string name="AccountAssignment_Popup_InformasiTambahanHint">Masukkan informasi tambahan</string>
    <string name="Laporan_Arsip_PilihLaporan">Pilih Laporan</string>
    <string name="Laporan_Popup_FormVisit">Lihat form visit</string>
    <string name="Laporan_Popup_FormCall">Lihat form call</string>
    <string name="HistoriTindakan_Adapter_DeskripsiTindakan">Deskripsi Tindakan</string>
    <string name="HistoriTindakan_Adapter_TanggalTindakan">Tanggal Tindakan</string>
    <string name="HistoriTindakan_Adapter_Pelaku">Petugas</string>
    <string name="HistoriTindakan_Adapter_AlasanTindakan">Alasan Tindakan</string>
    <string name="Button_LoginPage_Login">Login</string>
</resources>