<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Title-->
    <TextView
        android:text="@string/AccountAssignment_Popup_InformasiTambahanTitle"
        android:textColor="@color/White"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@drawable/background_rounded_rectangle_pagetitle"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--Additional info form-->
    <EditText
        android:id="@+id/AccountAssignment_Popup_InformasiTambahanContent"
        android:layout_marginTop="5dp"
        android:theme="@style/EditText.BroadcastBerita"
        android:inputType="textMultiLine"
        android:hint="@string/AccountAssignment_Popup_InformasiTambahanHint"
        android:gravity="top"
        android:padding="10dp"
        android:minLines="5"
        android:maxLines="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--Control button-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Assign button-->
        <TextView
            android:id="@+id/AccountAssignment_Popup_InformasiTambahan_AssignButton"
            android:text="@string/AccountAssignment_Assign"
            android:textColor="@color/White"
            android:background="@drawable/background_rounded_rectangle_pagetitle"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <!--Cancel button-->
        <TextView
            android:id="@+id/AccountAssignment_Popup_InformasiTambahan_CancelButton"
            android:text="@string/Text_Batal"
            android:textColor="@color/White"
            android:background="@drawable/background_rounded_rectangle_button_cancel"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>