<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/Background_Login_Temp"
    tools:context="com.mitkoindo.smartcollection.LoginActivity">

    <!--Logo bank btn-->
    <ImageView
        android:src="@drawable/temp_loginbackground1"
        android:scaleType="fitStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--Login form-->
    <LinearLayout
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--username form-->
        <TextView
            android:text="@string/Login_ID"
            android:textColor="@color/White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/LoginActivity_Username"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:theme="@style/EditText.Login"
            android:textColor="@color/White"
            android:textColorHint="@color/White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--password form-->
        <TextView
            android:text="@string/Login_Password"
            android:textColor="@color/White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/LoginActivity_Password"
            android:theme="@style/EditText.Login"
            android:textColor="@color/White"
            android:textColorHint="@color/White"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--&lt;!&ndash;checkbox untuk menampilkan password&ndash;&gt;
        <LinearLayout
            android:onClick="HandleInput_Login_ToggleSwitch"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/LoginActivity_RememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/Login_RememberMe"
                android:textColor="@color/White"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>-->

        <!--Login button-->
        <Button
            android:onClick="HandleInput_Login_LoginButton"
            android:background="@drawable/background_rounded_rectangle_loginbutton"
            android:layout_marginTop="10dp"
            android:text="@string/Button_LoginPage_Login"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--forgot password button-->
        <!--<Button
            android:background="@drawable/background_rounded_rectangle_loginbutton"
            android:layout_marginTop="10dp"
            android:text="@string/Button_LoginPage_ForgotPassword"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />-->

        <!--Version-->
        <TextView
            android:text="@string/App_Version"
            android:textColor="@color/White"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/Misc_Copyright"
            android:textColor="@color/White"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
